# akasha-tutorial

./: .gitignore  README.md  example_1.py  example_2.py  example_3.py  main.py  pyproject.toml  requirements.txt  requirements_mac_Mserise.txt
Docs_Food/: 台中美食.txt
Version08/: .gitignore  README.md  example_1.py  example_2.py  example_3.py  requirements.txt
Version08/Docs_Food/: 台中美食.txt
Version09/: example.py  example_mcp.py  logs_agent.json  main.py  mermaid.js  pyproject.toml
Version09/Agent/: cal_server.py  ex_agent.py  ex_mcp.py  weather_server.py
Version09/Ask/: ex_csv.py  ex_docx.py  ex_img.py  ex_mixed.py  ex_pdf.py  ex_remote_ask.py  ex_website.py  半導體趨勢分析報告.docx
Version09/Generation/: gen_image.py
Version09/RAG/: embedding_vector.ipynb  ex_rag.py
Version09/Vibe_coder/: app.py  app_py.txt
