[project]
name = "akasha-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akasha-terminal",
    "langchain-mcp-adapters==0.0.5",
    "playwright>=1.52.0",
]

[tool.uv.sources]
akasha-terminal = { git = "https://github.com/iii-org/akasha.git" }
